 * Fix: Add a more visible active state for side panel toggle buttons (Thibaud Colas)
 * Fix: Debounce and optimise live preview panel to prevent excessive requests (Sage Abdullah)
 * Fix: Use constant-time comparison for image serve URL signatures (Jake Howard)
 * Fix: Ensure taggit field type-ahead options show correctly in the dark mode theme (Sage Abdullah)
 * Docs: Document how to add non-ModelAdmin views to a `ModelAdminGroup` (Onno Timmerman)
 * Docs: Document how to add StructBlock data to a StreamField (Ramon Wenger)
 * Docs: Update ReadTheDocs settings to v2 to resolve urllib3 issue in linkcheck extension (Thibaud Colas)
 * Docs: Update documentation for `log_action` parameter on `RevisionMixin.save_revision` (Christer Jensen)
 * Docs: Reorganise snippets documentation to cover customisations and optional features (Sage Abdullah)
 * Docs: Update color customisations guidance to include theme-agnostic options (Thibaud Colas)
 * Docs: Mark LTS releases in release note page titles (Thiago C. S. Tioma)
 * Docs: Revise main Getting started tutorial for clarity (Kevin Chung (kev-odin))
 * Docs: Revamp the start of the getting started section, with separate quick install page (Damilola Oladele)
 * Docs: Move the tutorial’s snippets section to come before tags (Damilola Oladele)
 * Maintenance: Switch to ruff for flake8 / isort code checking (Oliver Parker)
 * Maintenance: Deprecate `insert_editor_css` in favour of `insert_global_admin_css` (Ester Beltrami)
 * Maintenance: Optimise use of `specific` on Task and TaskState (Matt Westcott)
 * Maintenance: Use table UI component for workflow task index view (Matt Westcott)
 * Maintenance: Make header search available on generic index view (Matt Westcott)
 * Maintenance: Update pagination behaviour to reject out-of-range / invalid page numbers (Matt Westcott)
 * Maintenance: Remove color tokens which are duplicates / unused (Thibaud Colas)