@@ -56,6 +56,7 @@ Thank you to Damilola for his work, and to Google for sponsoring this project.
  * Make it possible for speech recognition users to reveal chooser buttons (Thibaud Colas)
  * Use constant-time comparison for image serve URL signatures (Jake Howard)
  * Ensure taggit field type-ahead options show correctly in the dark mode theme (Sage Abdullah)
+ * Fix the lock description message missing the model_name variable when locked only by system (Sébastien Corbin)
 
 ### Documentation
 
